# timcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json  test_main.py  test_tools.py
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py  release.sh
src/mcp_tim_wrapper/: main.py  models.py  tim_api_client.py
tests/: test_main.py  test_tools.py  test_transports.py
