[project]
name = "mcp-tim-wrapper"
version = "1.1.0"
description = "A wrapper for the Google Travel Impact Model API, providing tools to calculate flight emissions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "mcp",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-anyio",
    "trio",
]
dev = [
    "ruff",
    "black",
]
lint = [
    "ruff",
]
format = [
    "black",
]

[project.scripts]
mcp-tim-wrapper = "mcp_tim_wrapper.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
